# orthw-shell

./: .gitignore  .licenserc.yaml  .pre-commit-config.yaml  NOTICE  README.md  orth  orthconfig-template  orthw  orthw.sh  orthwconfig-template  path-excludes.yml  pyproject.toml  requirements.txt  vcs-url-mapping.yml
.devcontainer/: devcontainer.json
.devcontainer/scripts/: postCreateCommand.sh
.github/: CODEOWNERS
.github/workflows/: build_and_deplot.yaml  commit_checks.yaml
docs/: getting-started.md
examples/: npm-mime-types-2.1.26-scan-result.json
examples/configuration/: how-to-fix-text-provider.kts
orthw/: __main__.py  commandbase.py  config.py  orthw.py  usage.py
orthw/commands/: __init__.py  analyze.py  analyze_in_docker.py  check_advisories.py  clean.py  copyrights.py  create_analyzer_results.py  delete_scan_results.py  evaluate.py  export_copyright_garbage.py  find_license_url.py  find_scans_for_package.py  generate_license_classification_request.py  handled_licenses.py  handled_licenses_by_category.py  init.py  licenses.py  offending_licenses.py  offending_packages.py  packages.py  packages_for_detected_licenses.py  pc_clean.py  pc_create.py  pc_export_curations.py  pc_export_path_excludes.py  pc_find.py  pc_format.py  pc_import_curations.py  pc_import_path_excludes.py  pc_sort.py  raw_licenses.py  rc_clean.py  rc_export_curations.py  rc_export_path_excludes.py  rc_format.py  rc_generate_project_excludes.py  rc_generate_rule_violation_resolutions.py  rc_generate_scopt_excludes.py  rc_generate_timeout_error_resolutions.py  rc_import_curations.py  (+5 more)
orthw/commands/template/: command_template.py.tmpl  generate.sh
orthw/templates/: __init__.py
orthw/utils/: __init__.py  checksum.py  database.py  logging.py  orthwclickgroup.py  process.py  required.py
src/orthw/: ISSUES  __init__.py  __main__.py  __version__.py  orthw.py
src/orthw/commands/: __init__.py  analyze.py  analyze_in_docker.py  check_advisories.py  clean.py  copyrights.py  create_analyzer_results.py  delete_scan_results.py  evaluate.py  export_copyright_garbage.py  find_license_url.py  find_scans_for_package.py  generate_license_classification_request.py  handled_licenses.py  handled_licenses_by_category.py  init.py  licenses.py  offending_licenses.py  offending_packages.py  packages.py  packages_for_detected_licenses.py  pc_clean.py  pc_create.py  pc_export_curations.py  pc_export_path_excludes.py  pc_find.py  pc_format.py  pc_import_curations.py  pc_import_path_excludes.py  pc_sort.py  raw_licenses.py  rc_clean.py  rc_export_curations.py  rc_export_path_excludes.py  rc_format.py  rc_generate_project_excludes.py  rc_generate_rule_violation_resolutions.py  rc_generate_scopt_excludes.py  rc_generate_timeout_error_resolutions.py  rc_import_curations.py  (+6 more)
src/orthw/commands/package_config/: __init__.py  clean.py  create.py  export_curations.py  export_path_excludes.py  find.py  format.py  import_curations.py  import_path_excludes.py  sort.py
src/orthw/commands/repository_config/: __init__.py  clean.py  export_curations.py  export_path_excludes.py  format.py  generate_project_excludes.py  generate_rule_violation_resolutions.py  generate_scope_excludes.py  generate_timeout-error-resolutions.py  generate_timeout_error_resolutions.py  import_curations.py  import_curations_update_only.py  import_path_excludes.py  import_path_excludes_update_only.py  sort.py
src/orthw/templates/: __init__.py  license_classification_request.txt.jinja2
src/orthw/utils/: __init__.py  checksum.py  cmdgroups.py  config.py  database.py  docker.py  orthwclickgroup.py  process.py  required.py
